feat: splitting between workshop and final implemetnation